--- a/app/views/v11/provider/create/employers-confirm.html
+++ b/app/views/v11/provider/create/employers-confirm.html
@@ -16,7 +16,7 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
     <!-- <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span> -->
     <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">Confirm employer</h1>
 
-    <form method="post" action="task-list">
+    <form method="post" action="">
       
       
       <div class="govuk-form-group">
@@ -31,14 +31,14 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
 
         <div class="govuk-radios">
           <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="create-vacancy-yes" name="create-vacancy" type="radio" value="yes">
+            <input class="govuk-radios__input" id="confirm_employer_yes" name="confirm_employer" type="radio" value="yes">
             <label class="govuk-label govuk-radios__label" for="create-vacancy-yes">
               Yes, use ABC opticians
             </label>
           </div>
           <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="create-vacancy-no" name="create-vacancy" type="radio" value="no">
-            <label class="govuk-label govuk-radios__label" for="create-vacancy-no">
+            <input class="govuk-radios__input" id="confirm_employer_no" name="confirm_employer" type="radio" value="no">
+            <label class="govuk-label govuk-radios__label" for="confirm_employer_no">
               No, choose a different employer
             </label>
           </div>
