--- a/app/views/v11/provider/api/api-list.html
+++ b/app/views/v11/provider/api/api-list.html
@@ -23,7 +23,7 @@ API list - Apprenticeships - GOV.UK
         </tr>
       </thead>
       <tbody class="govuk-table__body">
-        <!-- <tr class="govuk-table__row">
+        <tr class="govuk-table__row">
           <td class="govuk-table__cell" id="recruitment-api" name="apiName">
             Track Apprenticeship Progress API
             <span class="govuk-caption-m">Share data on the progress of your apprenticeships.</span>
@@ -45,7 +45,7 @@ API list - Apprenticeships - GOV.UK
               Get key
             </a>    
           </td>
-        </tr> -->
+        </tr>
         <tr class="govuk-table__row">
           <td class="govuk-table__cell" id="recruitment-api" name="apiName">
             Recruitment API
