--- a/app/views/v11/traineeships/create/extra-questions.html
+++ b/app/views/v11/traineeships/create/extra-questions.html
@@ -17,7 +17,9 @@ Do you have any questions you would like to ask applicants? (optional) - Recruit
 
     <form method="post" action="task-list?section5=completed">
 
-             <p>Applicants will answer these questions if they apply through Find an apprenticeship.</p>
+             <p>Applicants will answer these questions if they apply through Find a traineeship.</p>
+
+             <p>For example, why do you want to do a work placement with this company? What interests you about this traineeship? </p>
 
              <br>
   
