--- a/app/views/v11/provider/create/extra-questions.html
+++ b/app/views/v11/provider/create/extra-questions.html
@@ -19,6 +19,9 @@ Do you have any questions you would like to ask applicants? (optional) - Recruit
 
              <p>Applicants will answer these questions if they apply through Find an apprenticeship.</p>
 
+             <p>For example, why do you want to work for this company? What interests you about this role? </p>
+
+
              <br>
   
              <div class="govuk-form-group">
