--- a/app/views/v11/provider/account/application-failed.html
+++ b/app/views/v11/provider/account/application-failed.html
@@ -123,6 +123,8 @@ Manage apprentices
 
     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
     <section>
+      <h2 class="govuk-heading-l">Additional questions</h2>
+
       <h3 class="govuk-heading-s">Do you have a learning difficulty, disability or health problem?</h3>
       <p>No</p>
 
