share applications updated journey pages added

--- a/app/views/v12/provider/view-vacancy/3a-live.html
+++ b/app/views/v12/provider/view-vacancy/3a-live.html
@@ -151,7 +151,7 @@ Vacancies
             <div class="form-group search-field search-field-darker">
               <div class="search-input search-input-with-button">
                 <label class="govuk-label" for="search">
-                  Search by vacancy title, reference number, employer or applicant
+                  Search by vacancy title, reference number, employer or applicant name
                 </label>
 
                 <div class="autocomplete__parent_wrapper">
