--- a/app/views/v12/provider/view-vacancy/3b-manage-vacancy.html
+++ b/app/views/v12/provider/view-vacancy/3b-manage-vacancy.html
@@ -24,7 +24,9 @@ Manage vacancy
       </div>
     </div>
     {% endif %}
-    <h1 class="govuk-heading-xl">Manage vacancy</h1>
+
+        <span class="govuk-caption-l">Gloucestershire Health and Care NHS Foundation Trust</span>
+    <h1 class="govuk-heading-l">Entry Level Development Engineer Apprentice</h1>
 
 
 
@@ -59,7 +61,7 @@ Manage vacancy
       Closing date
     </dt>
     <dd class="govuk-summary-list__value">
-      <p class="govuk-body">01 Jan 2022</p>
+      <p class="govuk-body">01 Nov 2022</p>
     </dd>
   </div>
   <div class="govuk-summary-list__row">
@@ -67,7 +69,7 @@ Manage vacancy
       Possible start date
     </dt>
     <dd class="govuk-summary-list__value">
-      <p class="govuk-body">01 Aug 2022</p>
+      <p class="govuk-body">01 Jan 2023</p>
     </dd>
   </div>
   <div class="govuk-summary-list__row">
@@ -81,7 +83,6 @@ Manage vacancy
 </dl>
 <!-- ////END SUMMARY//// -->
     
-<!-- ///ANALYTICS//// -->
     <div class="grid-row">
       <div class="column-full">
 
@@ -93,72 +94,52 @@ Manage vacancy
         </p>
       </div>
     </div>
+
+    <br>
+
+    <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+      Vacancy analytics
+    </button>
+
+  
   </div>
 </div>
 
-<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-<!-- analytics START -->
-
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
-    <h2 class="govuk-heading-l">Vacancy analytics
-      <span class="govuk-caption-l">Showing stats from 20th Jan 2019 to 19th Feb 2019</span>
-    </h2>
-    <p class="govuk-body">Analytics show the total amount and the change from the previous 7 days</p>
-    <div id="analytics" class="govuk-grid-row">
-      <div class="analytics--block govuk-grid-column-one-half">
-        <!-- <h3 class="analytics--header govuk-heading-s">Appeared in search</h3> -->
-        <h3 class="govuk-heading-s">Appeared in search</h3>
-        <div class="analytics--summary">
-          <!-- <div class="analytics--numeric">68 <span class="govuk-visually-hidden">times</span></div> -->
-          <p class="analytics--info">68</p>
-          <p class="analytics--info"><span class="govuk-!-font-weight-bold">+12</span> increase <span class="govuk-visually-hidden"> in the last 7 days</span></p>
-        </div>
-        <!-- <div class="analytics--summary">
-          <div class="analytics--numeric">68 <span class="govuk-visually-hidden">times</span></div>
-          <p class="analytics--info"><span class="govuk-!-font-weight-bold">+12</span> increase <span class="govuk-visually-hidden"> in the last 7 days</span></p>
-        </div> -->
-      </div>
-      <div class="analytics--block govuk-grid-column-one-half">
-        <!-- <h3 class="analytics--header govuk-heading-s">Total times viewed</h3> -->
-        <h3 class="govuk-heading-s">Total times viewed</h3>
-        <div class="analytics--summary">
-          <!-- <div class="analytics--numeric">12</div> -->
-          <p class="analytics--info">12</p>
-          <p class="analytics--info"><span class="govuk-!-font-weight-bold">+5</span> increase <span class="govuk-visually-hidden"> in the last 7 days</span></p>
-        </div>
-      </div>
-      <div class="analytics--block govuk-grid-column-one-half">
-        <!-- <h3 class="analytics--header govuk-heading-s">Total applications started</h3> -->
-        <h3 class="govuk-heading-s">Total applications started</h3>
-        <div class="analytics--summary">
-          <!-- <div class="analytics--numeric">7</div> -->
-          <p class="analytics--info">7</p>
-          <p class="analytics--info"><span class="govuk-!-font-weight-bold">+1</span> increase <span class="govuk-visually-hidden"> in the last 7 days</span></p>
-        </div>
-      </div>
-      <div class="analytics--block govuk-grid-column-one-half">
-        <!-- <h3 class="analytics--header govuk-heading-s">Total applications submitted</h3> -->
-        <h3 class="govuk-heading-s">Total applications submitted</h3>
-        <div class="analytics--summary">
-          <!-- <div class="analytics--numeric">1</div> -->
-          <p class="analytics--info">12</p>
-          <p class="analytics--info"><span class="govuk-!-font-weight-bold">No</span> increase</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- ////END ANALYTICS//// -->
 
 <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-
+<!-- Application actions -->
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <h2 class="govuk-heading-l">Manage applications</h2>
 
+
+    <div class="govuk-grid-row" >
+      <div class="govuk-grid-column-two-thirds" >
+  <div style="background-color: #f3f2f1; padding: 10px;">
+  
+        
+        <h2 class="govuk-heading-s">Application actions</h2>
+  
+        
+        <p class="govuk-body" >
+          <a href="6a-share-applications">Share applications with employer</a>
+  
+          <br>
+          <br>
+  
+          <a href="#">Make multiple applications unsuccessful</a>
+        </p>
+  
+      </div>
+      </div>
+    </div>
+  <!-- end application actions -->
+
+  <br>
+  <br>
+  
   <!-- search box START -->
     <fieldset class="govuk-fieldset">
       <legend class="govuk-visually-hidden">Search employer name or account name</legend>
@@ -167,7 +148,7 @@ Manage vacancy
         <div class="search-input search-input-with-button">
           <label class="govuk-label" for="query">
             <!--Client reference-->
-            Search by applicant
+            Search applicant name
           </label>
 
           <div class="autocomplete__parent_wrapper">
@@ -191,9 +172,10 @@ Manage vacancy
 </div>
   <!-- search box END -->
 
+  
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
-  
+
     <table class="govuk-table responsive-table">
       <thead class="govuk-table__header">
         <tr class="govuk-table__row" role="row">
@@ -210,7 +192,7 @@ Manage vacancy
           <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="../account/application-succesful">Faizal Dawood</a></td>
           <td class="govuk-table__cell" role="gridcell" data-label="Application ID">C5662EA</td>
           <td class="govuk-table__cell" role="gridcell" data-label="Status">Successful</td>
-          <td class="govuk-table__cell" role="gridcell" data-label="Date applied">18 Oct 2018</td>
+          <td class="govuk-table__cell" role="gridcell" data-label="Date applied">18 Oct 2022</td>
           <td class="govuk-table__cell" role="gridcell" data-label="Prefer not to say">Prefer not to say</td>
 
         </tr>
@@ -218,7 +200,7 @@ Manage vacancy
           <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="../account/application-failed">Bill Shoggins</a></td>
           <td class="govuk-table__cell" role="gridcell" data-label="Application ID">C3432TR</td>
           <td class="govuk-table__cell" role="gridcell" data-label="Status">Unsuccessful</td>
-          <td class="govuk-table__cell" role="gridcell" data-label="Date applied">18 Oct 2018</td>
+          <td class="govuk-table__cell" role="gridcell" data-label="Date applied">18 Oct 2022</td>
           <td class="govuk-table__cell" role="gridcell" data-label="Prefer not to say">Prefer not to say</td>
 
         </tr>
@@ -226,7 +208,7 @@ Manage vacancy
           <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="../account/application-new">Rolo Tomasi</a></td>
           <td class="govuk-table__cell" role="gridcell" data-label="Application ID">C8824ED</td>
           <td class="govuk-table__cell" role="gridcell" data-label="Status">New</td>
-          <td class="govuk-table__cell" role="gridcell" data-label="Date applied">18 Oct 2018</td>
+          <td class="govuk-table__cell" role="gridcell" data-label="Date applied">18 Oct 2022</td>
           <td class="govuk-table__cell" role="gridcell" data-label="Prefer not to say">Prefer not to say</td>
 
         </tr>
