--- a/app/views/v12/provider/view-vacancy/6b-check-share.html
+++ b/app/views/v12/provider/view-vacancy/6b-check-share.html
@@ -52,6 +52,10 @@ Manage vacancy
         </div>
  <!-- radio buttons END -->
 
+ <button class="govuk-button" data-module="govuk-button">
+  Continue
+</button>
+
   </div>
 </div>
 
